--- a/10_code/plt_bounding_box.ipynb
+++ b/10_code/plt_bounding_box.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# Fetch all wastewater treatment plants within California's boundary (# changed to Texas)\n",
     "query = f\"\"\"\n",
-    "    area[admin_level=4][\"name\"=\"Georgia\"]->.searchArea; \n",
+    "    area[admin_level=4][\"name\"=\"Kansas\"]->.searchArea; \n",
     "    (\n",
     "    way[\"man_made\"=\"wastewater_plant\"](area.searchArea);\n",
     "    );\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -121,33 +121,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Plant_31457419</td>\n",
-       "      <td>POLYGON ((-84.97626 32.41316, -84.97538 32.413...</td>\n",
-       "      <td>POINT (-84.97721 32.41063)</td>\n",
+       "      <td>Plant_93755775</td>\n",
+       "      <td>POLYGON ((-96.73198 39.69701, -96.72904 39.697...</td>\n",
+       "      <td>POINT (-96.73048 39.69537)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Plant_34770800</td>\n",
-       "      <td>POLYGON ((-84.56326 33.34549, -84.56406 33.345...</td>\n",
-       "      <td>POINT (-84.56446 33.34747)</td>\n",
+       "      <td>Plant_95756290</td>\n",
+       "      <td>POLYGON ((-96.76414 39.42686, -96.76414 39.426...</td>\n",
+       "      <td>POINT (-96.76335 39.42613)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Plant_34770998</td>\n",
-       "      <td>POLYGON ((-84.55196 33.74347, -84.55110 33.743...</td>\n",
-       "      <td>POINT (-84.55363 33.74202)</td>\n",
+       "      <td>Old City Sewer Ponds</td>\n",
+       "      <td>POLYGON ((-100.45767 37.82334, -100.45715 37.8...</td>\n",
+       "      <td>POINT (-100.45668 37.82331)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>South Cobb Water Reclamation Facility</td>\n",
-       "      <td>POLYGON ((-84.53757 33.77225, -84.54008 33.773...</td>\n",
-       "      <td>POINT (-84.53795 33.77505)</td>\n",
+       "      <td>Nelson Wastewater Treatment Facility</td>\n",
+       "      <td>POLYGON ((-94.65340 39.04405, -94.65327 39.044...</td>\n",
+       "      <td>POINT (-94.65178 39.04213)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Plant_34771069</td>\n",
-       "      <td>POLYGON ((-83.59370 33.95150, -83.59415 33.950...</td>\n",
-       "      <td>POINT (-83.59615 33.95137)</td>\n",
+       "      <td>Harold Street Waste Water Treatment Plant</td>\n",
+       "      <td>POLYGON ((-94.81868 38.89833, -94.81943 38.898...</td>\n",
+       "      <td>POINT (-94.81935 38.89899)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -156,84 +156,84 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>223</th>\n",
-       "      <td>Plant_1186316344</td>\n",
-       "      <td>POLYGON ((-85.34845 34.46021, -85.34848 34.460...</td>\n",
-       "      <td>POINT (-85.34755 34.45935)</td>\n",
+       "      <th>204</th>\n",
+       "      <td>Plant_1197117183</td>\n",
+       "      <td>POLYGON ((-96.41168 39.38042, -96.41093 39.380...</td>\n",
+       "      <td>POINT (-96.41097 39.38217)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>224</th>\n",
-       "      <td>Former Chatham County Sanitary Sewerage Lift S...</td>\n",
-       "      <td>POLYGON ((-81.05812 31.97596, -81.05809 31.976...</td>\n",
-       "      <td>POINT (-81.05815 31.97597)</td>\n",
+       "      <th>205</th>\n",
+       "      <td>Plant_1202204350</td>\n",
+       "      <td>POLYGON ((-97.76471 39.26176, -97.76098 39.261...</td>\n",
+       "      <td>POINT (-97.76256 39.26060)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>225</th>\n",
-       "      <td>Fowler Water Reclamation Facility</td>\n",
-       "      <td>POLYGON ((-84.21200 34.15300, -84.21215 34.154...</td>\n",
-       "      <td>POINT (-84.21485 34.15379)</td>\n",
+       "      <th>206</th>\n",
+       "      <td>Plant_1202204360</td>\n",
+       "      <td>POLYGON ((-97.84014 39.35032, -97.83804 39.350...</td>\n",
+       "      <td>POINT (-97.83908 39.35163)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>226</th>\n",
-       "      <td>Omega Treatment Plant</td>\n",
-       "      <td>POLYGON ((-83.59347 31.34101, -83.59364 31.340...</td>\n",
-       "      <td>POINT (-83.59349 31.34089)</td>\n",
+       "      <th>207</th>\n",
+       "      <td>Plant_1202209774</td>\n",
+       "      <td>POLYGON ((-97.52528 39.45022, -97.52527 39.450...</td>\n",
+       "      <td>POINT (-97.52415 39.44982)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>227</th>\n",
-       "      <td>Plant_1224973919</td>\n",
-       "      <td>POLYGON ((-84.23700 33.30543, -84.23655 33.305...</td>\n",
-       "      <td>POINT (-84.23634 33.30562)</td>\n",
+       "      <th>208</th>\n",
+       "      <td>Plant_1224019182</td>\n",
+       "      <td>POLYGON ((-101.78654 39.78227, -101.78236 39.7...</td>\n",
+       "      <td>POINT (-101.78444 39.78399)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>228 rows × 3 columns</p>\n",
+       "<p>209 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             WWTP_name  \\\n",
-       "0                                       Plant_31457419   \n",
-       "1                                       Plant_34770800   \n",
-       "2                                       Plant_34770998   \n",
-       "3                South Cobb Water Reclamation Facility   \n",
-       "4                                       Plant_34771069   \n",
-       "..                                                 ...   \n",
-       "223                                   Plant_1186316344   \n",
-       "224  Former Chatham County Sanitary Sewerage Lift S...   \n",
-       "225                  Fowler Water Reclamation Facility   \n",
-       "226                              Omega Treatment Plant   \n",
-       "227                                   Plant_1224973919   \n",
+       "                                     WWTP_name  \\\n",
+       "0                               Plant_93755775   \n",
+       "1                               Plant_95756290   \n",
+       "2                         Old City Sewer Ponds   \n",
+       "3         Nelson Wastewater Treatment Facility   \n",
+       "4    Harold Street Waste Water Treatment Plant   \n",
+       "..                                         ...   \n",
+       "204                           Plant_1197117183   \n",
+       "205                           Plant_1202204350   \n",
+       "206                           Plant_1202204360   \n",
+       "207                           Plant_1202209774   \n",
+       "208                           Plant_1224019182   \n",
        "\n",
        "                                              geometry  \\\n",
-       "0    POLYGON ((-84.97626 32.41316, -84.97538 32.413...   \n",
-       "1    POLYGON ((-84.56326 33.34549, -84.56406 33.345...   \n",
-       "2    POLYGON ((-84.55196 33.74347, -84.55110 33.743...   \n",
-       "3    POLYGON ((-84.53757 33.77225, -84.54008 33.773...   \n",
-       "4    POLYGON ((-83.59370 33.95150, -83.59415 33.950...   \n",
+       "0    POLYGON ((-96.73198 39.69701, -96.72904 39.697...   \n",
+       "1    POLYGON ((-96.76414 39.42686, -96.76414 39.426...   \n",
+       "2    POLYGON ((-100.45767 37.82334, -100.45715 37.8...   \n",
+       "3    POLYGON ((-94.65340 39.04405, -94.65327 39.044...   \n",
+       "4    POLYGON ((-94.81868 38.89833, -94.81943 38.898...   \n",
        "..                                                 ...   \n",
-       "223  POLYGON ((-85.34845 34.46021, -85.34848 34.460...   \n",
-       "224  POLYGON ((-81.05812 31.97596, -81.05809 31.976...   \n",
-       "225  POLYGON ((-84.21200 34.15300, -84.21215 34.154...   \n",
-       "226  POLYGON ((-83.59347 31.34101, -83.59364 31.340...   \n",
-       "227  POLYGON ((-84.23700 33.30543, -84.23655 33.305...   \n",
+       "204  POLYGON ((-96.41168 39.38042, -96.41093 39.380...   \n",
+       "205  POLYGON ((-97.76471 39.26176, -97.76098 39.261...   \n",
+       "206  POLYGON ((-97.84014 39.35032, -97.83804 39.350...   \n",
+       "207  POLYGON ((-97.52528 39.45022, -97.52527 39.450...   \n",
+       "208  POLYGON ((-101.78654 39.78227, -101.78236 39.7...   \n",
        "\n",
-       "                       centroid  \n",
-       "0    POINT (-84.97721 32.41063)  \n",
-       "1    POINT (-84.56446 33.34747)  \n",
-       "2    POINT (-84.55363 33.74202)  \n",
-       "3    POINT (-84.53795 33.77505)  \n",
-       "4    POINT (-83.59615 33.95137)  \n",
-       "..                          ...  \n",
-       "223  POINT (-85.34755 34.45935)  \n",
-       "224  POINT (-81.05815 31.97597)  \n",
-       "225  POINT (-84.21485 34.15379)  \n",
-       "226  POINT (-83.59349 31.34089)  \n",
-       "227  POINT (-84.23634 33.30562)  \n",
+       "                        centroid  \n",
+       "0     POINT (-96.73048 39.69537)  \n",
+       "1     POINT (-96.76335 39.42613)  \n",
+       "2    POINT (-100.45668 37.82331)  \n",
+       "3     POINT (-94.65178 39.04213)  \n",
+       "4     POINT (-94.81935 38.89899)  \n",
+       "..                           ...  \n",
+       "204   POINT (-96.41097 39.38217)  \n",
+       "205   POINT (-97.76256 39.26060)  \n",
+       "206   POINT (-97.83908 39.35163)  \n",
+       "207   POINT (-97.52415 39.44982)  \n",
+       "208  POINT (-101.78444 39.78399)  \n",
        "\n",
-       "[228 rows x 3 columns]"
+       "[209 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -263,22 +263,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "plotting bounding box:   2%|▏         | 5/219 [00:13<13:34,  3.81s/it]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Added progress bar\n",
     "# use loop to open the image in tif folder, and plot the bounding box on it\n",
     "# read all the file names in the folder\n",
-    "directory = 'tif_bounding_box/Images of All 50 States/Georgia'\n",
+    "directory = 'tif_bounding_box/Images of All 50 States/Kansas'\n",
     "files = os.listdir(directory)\n",
     "\n",
     "for file in tqdm(files, desc='plotting bounding box'):\n",
