--- a/10_code/HydroWaste_OSM_analysis.ipynb
+++ b/10_code/HydroWaste_OSM_analysis.ipynb
@@ -15,7 +15,7 @@
     "%config InlineBackend.figure_format = 'retina' \n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "from src import utils_HydroWaste as utils"
+    "from src import utils_plot as utils"
    ]
   },
   {
@@ -139,7 +139,7 @@
    "source": [
     "df_hw_us = utils.read_HydroWaste_data(\n",
     "    HydroWaste_path=\"../HydroWASTE_v10/HydroWASTE_v10.csv\",\n",
-    "    us_boundary_path=\"../HydroWASTE_v10/US_State_Boundaries\",\n",
+    "    us_boundary_path=\"../00_source_data/US_State_Boundaries\",\n",
     ")\n",
     "df_hw_us.head()"
    ]
@@ -172,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "us_boundary = gpd.read_file(\"../HydroWASTE_v10/US_State_Boundaries\")"
+    "us_boundary = gpd.read_file(\"../00_source_data/US_State_Boundaries\")"
    ]
   },
   {
