Cleaned plotting bounding boxes

--- a/10_code/plot_bounding_box.ipynb
+++ b/10_code/plot_bounding_box.ipynb
@@ -28,222 +28,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# os.chdir('/Users/yer1k/Documents/Master/Duke/2023 Fall/Capstone/solar_wastewater/30_result/')\n",
-    "os.chdir('/Users/yer1k/Library/CloudStorage/GoogleDrive-iamtsubasaozora@gmail.com/My Drive/Capstone Project/Data/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "api = overpy.Overpass()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Fetch all wastewater treatment plants within California's boundary (# changed to Texas)\n",
-    "query = f\"\"\"\n",
-    "    area[admin_level=4][\"name\"=\"California\"]->.searchArea; \n",
-    "    (\n",
-    "    way[\"man_made\"=\"wastewater_plant\"](area.searchArea);\n",
-    "    );\n",
-    "    (._;>;);\n",
-    "    out body;\n",
-    "    \"\"\"\n",
-    "\n",
-    "result = api.query(query)\n",
-    "\n",
-    "plants = {}\n",
-    "\n",
-    "for way in result.ways:\n",
-    "    # Use the name of the plant or its ID if the name is not available\n",
-    "    plant_name = way.tags.get(\"name\", f\"Plant_{way.id}\")\n",
-    "\n",
-    "    # Extract nodes lat and lon without id\n",
-    "    nodes_coords = [(node.lon, node.lat) for node in way.nodes]\n",
-    "\n",
-    "    # get rid of \"Decimal\"  in the coordinates\n",
-    "    nodes_coords = [tuple(map(float, i)) for i in nodes_coords]\n",
-    "    \n",
-    "    plants[plant_name] = nodes_coords\n",
-    "\n",
-    "# plants_with_official_name = {key: value for key, value in plants.items() if not key.startswith(\"Plant_\")}\n",
-    "\n",
-    "\n",
-    "geoms = [Polygon(plants[key]) for key in plants]\n",
-    "df = gpd.GeoDataFrame({'WWTP_name': list(plants.keys()), 'geometry': geoms}, crs=\"EPSG:4326\")\n",
-    "df[\"centroid\"] = df.to_crs('+proj=cea').centroid.to_crs(epsg=4326)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>WWTP_name</th>\n",
-       "      <th>geometry</th>\n",
-       "      <th>centroid</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Plant_24298754</td>\n",
-       "      <td>POLYGON ((-121.80940 37.69305, -121.80582 37.6...</td>\n",
-       "      <td>POINT (-121.80762 37.69120)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Plant_24396910</td>\n",
-       "      <td>POLYGON ((-121.78360 36.80423, -121.78363 36.8...</td>\n",
-       "      <td>POINT (-121.78025 36.79990)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>EBMUD Wastewater Treatment Plant</td>\n",
-       "      <td>POLYGON ((-122.29310 37.82285, -122.29238 37.8...</td>\n",
-       "      <td>POINT (-122.29525 37.82512)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Hyperion Wastewater Treatment Plant</td>\n",
-       "      <td>POLYGON ((-118.42914 33.91957, -118.43162 33.9...</td>\n",
-       "      <td>POINT (-118.43006 33.92574)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>San José–Santa Clara Regional Wastewater Facility</td>\n",
-       "      <td>POLYGON ((-121.95539 37.43062, -121.95452 37.4...</td>\n",
-       "      <td>POINT (-121.94663 37.43156)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3076</th>\n",
-       "      <td>Plant_1225793761</td>\n",
-       "      <td>POLYGON ((-122.65005 38.01477, -122.64995 38.0...</td>\n",
-       "      <td>POINT (-122.65182 38.01385)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3077</th>\n",
-       "      <td>Tooleville Wastewater Treatment Plant</td>\n",
-       "      <td>POLYGON ((-119.11341 36.28593, -119.11341 36.2...</td>\n",
-       "      <td>POINT (-119.11457 36.28416)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3078</th>\n",
-       "      <td>Adelanto Wastewater Treatment Plant</td>\n",
-       "      <td>POLYGON ((-117.40319 34.59732, -117.40311 34.5...</td>\n",
-       "      <td>POINT (-117.40632 34.59558)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3079</th>\n",
-       "      <td>Plant_1229835714</td>\n",
-       "      <td>POLYGON ((-124.14779 41.05681, -124.14801 41.0...</td>\n",
-       "      <td>POINT (-124.14792 41.05683)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3080</th>\n",
-       "      <td>Plant_1236450641</td>\n",
-       "      <td>POLYGON ((-122.07118 38.22555, -122.07472 38.2...</td>\n",
-       "      <td>POINT (-122.07778 38.22161)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3081 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              WWTP_name  \\\n",
-       "0                                        Plant_24298754   \n",
-       "1                                        Plant_24396910   \n",
-       "2                      EBMUD Wastewater Treatment Plant   \n",
-       "3                   Hyperion Wastewater Treatment Plant   \n",
-       "4     San José–Santa Clara Regional Wastewater Facility   \n",
-       "...                                                 ...   \n",
-       "3076                                   Plant_1225793761   \n",
-       "3077              Tooleville Wastewater Treatment Plant   \n",
-       "3078                Adelanto Wastewater Treatment Plant   \n",
-       "3079                                   Plant_1229835714   \n",
-       "3080                                   Plant_1236450641   \n",
-       "\n",
-       "                                               geometry  \\\n",
-       "0     POLYGON ((-121.80940 37.69305, -121.80582 37.6...   \n",
-       "1     POLYGON ((-121.78360 36.80423, -121.78363 36.8...   \n",
-       "2     POLYGON ((-122.29310 37.82285, -122.29238 37.8...   \n",
-       "3     POLYGON ((-118.42914 33.91957, -118.43162 33.9...   \n",
-       "4     POLYGON ((-121.95539 37.43062, -121.95452 37.4...   \n",
-       "...                                                 ...   \n",
-       "3076  POLYGON ((-122.65005 38.01477, -122.64995 38.0...   \n",
-       "3077  POLYGON ((-119.11341 36.28593, -119.11341 36.2...   \n",
-       "3078  POLYGON ((-117.40319 34.59732, -117.40311 34.5...   \n",
-       "3079  POLYGON ((-124.14779 41.05681, -124.14801 41.0...   \n",
-       "3080  POLYGON ((-122.07118 38.22555, -122.07472 38.2...   \n",
-       "\n",
-       "                         centroid  \n",
-       "0     POINT (-121.80762 37.69120)  \n",
-       "1     POINT (-121.78025 36.79990)  \n",
-       "2     POINT (-122.29525 37.82512)  \n",
-       "3     POINT (-118.43006 33.92574)  \n",
-       "4     POINT (-121.94663 37.43156)  \n",
-       "...                           ...  \n",
-       "3076  POINT (-122.65182 38.01385)  \n",
-       "3077  POINT (-119.11457 36.28416)  \n",
-       "3078  POINT (-117.40632 34.59558)  \n",
-       "3079  POINT (-124.14792 41.05683)  \n",
-       "3080  POINT (-122.07778 38.22161)  \n",
-       "\n",
-       "[3081 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [
@@ -297,7 +81,7 @@
     "# Added progress bar\n",
     "# use loop to open the image in tif folder, and plot the bounding box on it\n",
     "# read all the file names in the folder\n",
-    "directory = 'tif_bounding_box/Images of All 50 States/California'\n",
+    "directory = '../00_source_data/WWTP_Images'\n",
     "files = os.listdir(directory)\n",
     "\n",
     "for file in tqdm(files, desc='plotting bounding box'):\n",
@@ -324,13 +108,6 @@
     "    except:\n",
     "        print(f\"fail to plot {file}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
