--- a/40_docs/README
+++ b/40_docs/README
@@ -1,1 +1,11 @@
 ## This is the warehouse for the great minds spoken and logistics documents
+
+## Final Presentation
+
+- [Solar Adoption in the US Wastewater Sector](./Presentation - Solar Adoption in the US Wastewater Sector.pdf)
+    This is the final presentation for the project. It contains the motivation, methodology, results, and impact of the project. Please refer to this document for a comprehensive overview of the project.
+    > Note: The animated presentation is stored in a Google Drive folder. You will need to request access to the folder to view the document. [Link to the animated presentation](https://docs.google.com/presentation/d/1Z8flCSFsrAtWa0HSw4SMfZlpBfJmj0tp/edit?usp=drive_link&ouid=111199461708799499514&rtpof=true&sd=true)
+
+## Client Meeting Notes
+Notes from the client meetings are stored in the [Client Meeting Notes](https://drive.google.com/drive/folders/1GzK076xFD6f_3iwEMl5Dmm8cTpyTOgzM?usp=drive_link) folder. Each document is named with the date of the meeting and contains the notes from that meeting.
+> Note: The client meeting notes are stored in a Google Drive folder. You will need to request access to the folder to view the documents.
